--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Main -->
+    <dimen name="drawer_menu_container_width">240dp</dimen>
+
+    <!-- Job assign -->
+    <dimen name="tab_height">30dp</dimen>
+
 </resources>
