--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Actionbar color -->
+        <item name="colorPrimary">@android:color/white</item>
+        <!-- Status bar color
+        <item name="colorPrimaryDark">@android:color/white</item> -->
+        <!-- Window color-->
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
 
 </resources>
