--- a/app/src/main/res/layout/fragment_drawer_menu.xml
+++ b/app/src/main/res/layout/fragment_drawer_menu.xml
@@ -1,5 +1,10 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</FrameLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="This is DrawerMenuFragment"/>
+
+</RelativeLayout>
