--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="action_bar_baseline_color">#858585</color>
 
     <!-- Navigation drawer -->
-    <color name="drawer_menu_background_color">#88FFFFFF</color>
+    <color name="drawer_menu_background_color">@android:color/white</color>
 
 </resources>
