--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <!-- Navigation drawer -->
     <color name="drawer_menu_background_color">@android:color/white</color>
 
+    <!-- Task assign -->
+    <color name="task_container_background_color">#393939</color>
+    <color name="task_spinner_text_color">@android:color/white</color>
+
 </resources>
