--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Job assign page -->
+    <!-- Task assign page -->
     <integer name="worker_container_weight">5</integer>
-    <integer name="job_container_weight">3</integer>
+    <integer name="task_container_weight">3</integer>
 
 </resources>
