--- a/app/src/main/res/layout/fragment_task_assign.xml
+++ b/app/src/main/res/layout/fragment_task_assign.xml
@@ -16,11 +16,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <!--
-        <ViewPager
+        <android.support.v4.view.ViewPager
             android:id="@+id/worker_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" /> -->
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
