--- a/app/src/main/res/layout/fragment_assign_task.xml
+++ b/app/src/main/res/layout/fragment_assign_task.xml
@@ -28,13 +28,108 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="@integer/task_container_weight"
-        android:background="@color/task_container_background_color"
-        android:gravity="center_horizontal">
+        android:background="@color/task_container_background_color">
 
-        <Spinner
-            android:id="@+id/task_spinner"
+        <RelativeLayout
+            android:id="@+id/task_container_top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true">
+
+            <Spinner
+                android:id="@+id/task_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+
+            <TextView
+                android:id="@+id/person_in_charge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingRight="@dimen/person_in_charge_padding_right"
+                android:textStyle="bold"
+                android:textColor="@color/person_in_charge_text_color"
+                android:text="負責人：X"/>
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/task_container_top_content_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/task_container_top"
+            android:background="@color/task_spinner_divider_color"/>
+
+        <LinearLayout
+            android:id="@+id/to_do_list_container"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/to_do_list_container_padding_left_right"
+            android:paddingRight="@dimen/to_do_list_container_padding_left_right"
+            android:layout_below="@+id/task_container_top_content_divider"
+            android:layout_alignParentLeft="true"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/to_do_list_title"
+                style="@style/ToDoListTextStyle.Title"
+                android:paddingTop="@dimen/to_do_list_title_padding_top_bottom"
+                android:paddingBottom="@dimen/to_do_list_title_padding_top_bottom"
+                android:layout_gravity="center_horizontal"
+                android:text="待辦事項"/>
+
+            <TextView
+                android:id="@+id/uncompleted_task_time_text"
+                style="@style/ToDoListTextStyle.Content"
+                android:text="工作未完成時數"/>
+
+            <TextView
+                android:id="@+id/uncompleted_task_time"
+                style="@style/ToDoListTextStyle.Content"
+                android:text="4:22:00"/>
+
+            <TextView
+                android:id="@+id/undergoing_task_time_text"
+                style="@style/ToDoListTextStyle.Content"
+                android:text="工作以進行時數"/>
+
+            <TextView
+                android:id="@+id/undergoing_task_time"
+                style="@style/ToDoListTextStyle.Content"
+                android:text="11:23:11"/>
+
+            <TextView
+                android:id="@+id/undergoing_worker_count_text"
+                style="@style/ToDoListTextStyle.Content"
+                android:text="進行員工數"/>
+
+            <TextView
+                android:id="@+id/undergoing_worker_count"
+                style="@style/ToDoListTextStyle.Content"
+                android:text="6"/>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@+id/to_do_list_container"
+            android:layout_below="@+id/task_container_top_content_divider">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/task_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/task_list_height"
+                android:paddingLeft="@dimen/task_list_padding"
+                android:paddingTop="@dimen/task_list_padding"
+                android:paddingBottom="@dimen/task_list_padding"
+                android:layout_centerInParent="true"
+                android:scrollbars="horizontal"
+                android:background="@drawable/task_list_background"/>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
