--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,17 @@
     <!-- Task assign -->
     <color name="task_container_background_color">#FF393939</color>
     <color name="task_spinner_text_color">@android:color/white</color>
+    <color name="task_spinner_divider_color">#FF858585</color>
+    <color name="person_in_charge_text_color">@android:color/white</color>
+    <color name="to_do_list_text_color">@android:color/white</color>
+    <color name="task_list_background_color">#FFECECEC</color>
+    <color name="task_item_background_color">#FFCFCFCF</color>
+    <color name="task_item_stroke_color">#FF858585</color>
+    <color name="task_item_status_text_color">@android:color/white</color>
+    <color name="task_item_status_undergoing_color">#FF55941F</color>
+    <color name="task_item_status_overtime_color">#FFC30016</color>
+    <color name="task_item_status_completed_color">@android:color/transparent</color>
+    <color name="task_item_status_completed_filter_color">#FFECECEC</color>
 
     <!-- Task assign: Worker grid view -->
     <color name="worker_grid_view_item_background_color">#FFCFCFCF</color>
