--- a/app/src/main/res/layout/fragment_assign_task.xml
+++ b/app/src/main/res/layout/fragment_assign_task.xml
@@ -3,25 +3,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/worker_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="@integer/worker_container_weight"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:layout_weight="@integer/worker_container_weight">
 
         <Spinner
             android:id="@+id/factory_spinner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"/>
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/worker_viewpager"
+            android:id="@+id/worker_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_below="@+id/factory_spinner"
+            android:layout_above="@+id/worker_pager_indicator_container"/>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/worker_pager_indicator_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/worker_pager_indicator_container_padding_bottom"
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true" />
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/task_container"
