--- a/app/src/main/res/layout/worker_grid_view_item.xml
+++ b/app/src/main/res/layout/worker_grid_view_item.xml
@@ -9,8 +9,6 @@
         android:id="@+id/worker_title_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingLeft="@dimen/worker_title_container_padding_left_right"
-        android:paddingRight="@dimen/worker_title_container_padding_left_right"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -34,6 +32,7 @@
             android:id="@+id/worker_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/worker_title_margin_right"
             android:textSize="@dimen/worker_title_text_size"
             android:text="工頭"
             android:layout_alignParentRight="true"
