--- a/app/src/main/res/layout/worker_item.xml
+++ b/app/src/main/res/layout/worker_item.xml
@@ -34,14 +34,13 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/worker_title_margin_right"
             android:textSize="@dimen/worker_title_text_size"
-            android:text="工頭"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"/>
 
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/working_content_container"
+        android:id="@+id/task_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -52,12 +51,11 @@
         android:background="@drawable/working_content_container_background">
 
         <TextView
-            android:id="@+id/working_content"
+            android:id="@+id/task"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/working_content_text_size"
-            android:textStyle="bold"
-            android:text="外面鑽孔 孔3"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -84,15 +82,13 @@
             android:paddingLeft="@dimen/working_status_padding_left_right"
             android:paddingRight="@dimen/working_status_padding_left_right"
             android:textSize="@dimen/working_status_text_size"
-            android:textStyle="bold"
-            android:text="正常工作中"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/working_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/working_status_text_size"
-            android:text="6:13:12"/>
+            android:textSize="@dimen/working_status_text_size" />
 
     </LinearLayout>
 
