Refactory navigation drawer and tool bar
1. Let drawer layout extend to action bar when open
2. Refactory navigation drawer
3. Refactory tool bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,22 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tool_bar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/action_bar_baseline_color" />
+        <include
+            layout="@layout/tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/action_bar_baseline_color" />
 
         <!-- Main content view -->
         <FrameLayout
@@ -26,14 +25,14 @@
             android:layout_height="match_parent"
             android:clickable="true" />
 
-        <!-- Navigation drawer -->
-        <FrameLayout
-            android:id="@+id/drawer_menu_container"
-            android:layout_width="@dimen/drawer_menu_container_width"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="@color/drawer_menu_background_color" />
+    </LinearLayout>
 
-    </android.support.v4.widget.DrawerLayout>
+    <!-- Navigation drawer -->
+    <FrameLayout
+        android:id="@+id/drawer_menu_container"
+        android:layout_width="@dimen/drawer_menu_container_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/drawer_menu_background_color" />
 
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
