--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,8 +2,9 @@
 <resources>
 
     <!-- Task assign page -->
-    <integer name="worker_container_weight">3</integer>
-    <integer name="task_container_weight">1</integer>
+    <integer name="worker_container_weight">5</integer>
+    <integer name="task_container_weight">3</integer>
+    <integer name="task_list_column_count">2</integer>
     <integer name="worker_gridview_column_count">3</integer>
 
 </resources>
