--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,19 +10,19 @@
         <item name="android:windowBackground">@android:color/white</item>
     </style>
 
-    <style name="ToDoListTextStyle">
+    <style name="TaskContainerTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/to_do_list_text_color</item>
     </style>
 
-    <style name="ToDoListTextStyle.Title">
-        <item name="android:textSize">@dimen/to_do_list_title_text_size</item>
+    <style name="TaskContainerTextStyle.TaskItemTitle">
+        <item name="android:textSize">@dimen/task_item_title_text_size</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="ToDoListTextStyle.Content">
-        <item name="android:textSize">@dimen/to_do_list_content_text_size</item>
+    <style name="TaskContainerTextStyle.TaskItemContent">
+        <item name="android:textSize">@dimen/task_item_content_text_size</item>
     </style>
 
 </resources>
