--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,13 @@
     <dimen name="working_status_padding_left_right">5dp</dimen>
     <dimen name="working_status_text_size">13dp</dimen>
 
+    <!-- CaseOverView fragment -->
+    <dimen name="case_overview_divider_height">10dp</dimen>
+    <dimen name="case_overview_divider_width">10dp</dimen>
+    <dimen name="case_overview_tv_factory_margin_left">25dp</dimen>
+    <dimen name="case_overview_tv_factory_margin_right">40dp</dimen>
+    <dimen name="case_overview_right_pant_padding_horizontal">10dp</dimen>
+    <dimen name="case_overview_right_pant_padding_vertical">15dp</dimen>
+    <dimen name="case_overview_border_tv_padding">5dp</dimen>
+
 </resources>
