Design of tool bar(action bar)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,15 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include
-            layout="@layout/tool_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/action_bar_baseline_color" />
+
+        <include
+            layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <!-- Main content view -->
         <FrameLayout
