--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,31 @@
 <resources>
 
+    <style name="AppTheme" parent="@style/BaseAppTheme">
+    </style>
+
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Actionbar color -->
-        <item name="colorPrimary">@android:color/white</item>
-        <!-- Status bar color
-        <item name="colorPrimaryDark">@android:color/white</item> -->
-        <!-- Window color-->
+    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Action bar color -->
+        <item name="colorPrimary">@color/action_bar_primary_color</item>
+        <!-- Status bar color -->
+        <item name="colorPrimaryDark">@color/action_bar_primary_dark_color</item>
+
+        <item name="drawerArrowStyle">@style/BaseAppTheme.DrawerArrowStyle</item>
         <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="BaseAppThemeOverlay.Toolbar" parent="ThemeOverlay.AppCompat.ActionBar">
+        <!-- Customize color of navigation drawer icon and back arrow -->
+        <item name="colorControlNormal">@android:color/white</item>
+    </style>
+
+    <style name="BaseAppTheme.Toolbar.Title" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="BaseAppTheme.DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@android:color/white</item>
     </style>
 
     <style name="TaskCaseTextStyle">
