--- a/app/src/main/res/layout/case_spinner_dropdown_view.xml
+++ b/app/src/main/res/layout/case_spinner_dropdown_view.xml
@@ -4,8 +4,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/case_spinner_dropdown_view_tv_factory_name"
+        android:id="@+id/case_spinner_dropdown_view_tv_vendor_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textSize="22sp"
+        android:textColor="#000000"
+        android:layout_height="@dimen/case_overview_listview_item_height" />
 
 </LinearLayout>
