--- a/app/src/main/res/layout/case_spinner_view.xml
+++ b/app/src/main/res/layout/case_spinner_view.xml
@@ -8,6 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
         android:src="@android:drawable/ic_menu_call"/>
 
     <ImageView
@@ -15,12 +17,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:src="@android:drawable/ic_dialog_email" />
 
     <TextView
-        android:id="@+id/case_spinner_view_tv_factory_name"
+        android:id="@+id/case_spinner_view_tv_vendor_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"/>
+        android:textSize="22sp"
+        android:textColor="#000000"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
