--- a/app/src/main/res/layout/fragment_case_overview.xml
+++ b/app/src/main/res/layout/fragment_case_overview.xml
@@ -10,9 +10,11 @@
 
         <Spinner
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/case_overview_listview_item_height"
             android:id="@+id/case_spinner"
             android:spinnerMode="dropdown"
+            android:paddingLeft="@dimen/case_overview_listview_padding_horizontal"
+            android:paddingRight="@dimen/case_overview_listview_padding_horizontal"
             android:background="@null"/>
 
         <View
@@ -22,14 +24,24 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@android:drawable/btn_plus"
+            android:layout_height="@dimen/case_overview_listview_item_height"
+            android:drawableLeft="@android:drawable/ic_menu_search"
             android:singleLine="true"
+            android:background="@null"
+            android:paddingLeft="@dimen/case_overview_listview_padding_horizontal"
+            android:paddingRight="@dimen/case_overview_listview_padding_horizontal"
             android:id="@+id/et_search_case" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#808080" />
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:divider="#808080"
+            android:dividerHeight="1dp"
             android:id="@+id/case_listview" />
     </LinearLayout>
 
@@ -65,26 +77,31 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="20sp"
                         android:id="@+id/case_tv_case_name_selected" />
 
-                    <LinearLayout
-                        android:orientation="horizontal"
+                    <RelativeLayout
+                        android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:id="@+id/vg1"
                             android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="18sp"
+                                android:layout_marginTop="5dp"
                                 android:text="@string/case_factory_selected"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="18sp"
                                 android:text="@string/case_person_in_charge_selected" />
 
                         </LinearLayout>
@@ -93,46 +110,55 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/case_overview_tv_factory_margin_left"
-                            android:layout_marginRight="@dimen/case_overview_tv_factory_margin_right"
+                            android:layout_toRightOf="@id/vg1"
                             android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/case_tv_factory_selected" />
+                                android:textSize="18sp"
+                                android:id="@+id/case_tv_vendor_selected" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="18sp"
+                                android:layout_marginTop="5dp"
                                 android:id="@+id/case_tv_person_in_charge_selected" />
 
                         </LinearLayout>
 
                         <LinearLayout
                             android:orientation="vertical"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="100dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="18sp"
                                 android:text="@string/case_percent_selected" />
 
                             <com.bananaplan.workflowandroid.caseoverview.CaseCustomProgressBar
                                 style="?android:attr/progressBarStyleHorizontal"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_width="300dp"
+                                android:layout_height="30dp"
                                 android:max="100"
+                                android:layout_marginTop="5dp"
                                 android:id="@+id/case_progressBar"
                                 android:progressDrawable="@drawable/case_progress_drawable"/>
                         </LinearLayout>
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp">
 
                         <LinearLayout
                             android:orientation="vertical"
@@ -144,13 +170,19 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="18sp"
                                 android:text="@string/case_hours_passed_by" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="22sp"
+                                android:layout_marginTop="3dp"
                                 android:background="@drawable/border_textview_bg"
-                                android:padding="@dimen/case_overview_border_tv_padding"
+                                android:paddingLeft="@dimen/case_overview_border_tv_padding_horizontal"
+                                android:paddingRight="@dimen/case_overview_border_tv_padding_horizontal"
+                                android:paddingTop="@dimen/case_overview_border_tv_padding_vertical"
+                                android:paddingBottom="@dimen/case_overview_border_tv_padding_vertical"
                                 android:id="@+id/case_tv_hours_passed_by" />
                         </LinearLayout>
 
@@ -164,13 +196,19 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="18sp"
                                 android:text="@string/case_hours_unfinished" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="22sp"
+                                android:layout_marginTop="3dp"
                                 android:background="@drawable/border_textview_bg"
-                                android:padding="@dimen/case_overview_border_tv_padding"
+                                android:paddingLeft="@dimen/case_overview_border_tv_padding_horizontal"
+                                android:paddingRight="@dimen/case_overview_border_tv_padding_horizontal"
+                                android:paddingTop="@dimen/case_overview_border_tv_padding_vertical"
+                                android:paddingBottom="@dimen/case_overview_border_tv_padding_vertical"
                                 android:id="@+id/case_tv_hours_unfinished" />
                         </LinearLayout>
 
@@ -184,14 +222,20 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="18sp"
                                 android:text="@string/case_hours_forecast" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textSize="22sp"
+                                android:layout_marginTop="3dp"
                                 android:textColor="@android:color/holo_red_dark"
                                 android:background="@drawable/border_textview_bg"
-                                android:padding="@dimen/case_overview_border_tv_padding"
+                                android:paddingLeft="@dimen/case_overview_border_tv_padding_horizontal"
+                                android:paddingRight="@dimen/case_overview_border_tv_padding_horizontal"
+                                android:paddingTop="@dimen/case_overview_border_tv_padding_vertical"
+                                android:paddingBottom="@dimen/case_overview_border_tv_padding_vertical"
                                 android:id="@+id/case_tv_hours_forecast" />
                         </LinearLayout>
 
