--- a/app/src/main/res/layout/task_case_header.xml
+++ b/app/src/main/res/layout/task_case_header.xml
@@ -1,59 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/task_item_height"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/task_case_header_margin_bottom"
     android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:background="@color/task_case_header_background_color">
+    android:gravity="center_horizontal">
 
     <Spinner
         android:id="@+id/task_case_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
-
-    <LinearLayout
-        android:id="@+id/to_do_list_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/task_case_spinner"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_marginBottom="@dimen/task_case_header_margin_bottom"
+        android:background="@null"/>
 
-        <TextView
-            android:id="@+id/to_do_list_title"
-            style="@style/TaskCaseTextStyle.TaskItemContent"
-            android:layout_gravity="center_horizontal"
-            android:text="待辦事項"/>
-
-        <TextView
-            android:id="@+id/uncompleted_task_time_text"
-            style="@style/TaskCaseTextStyle.TaskItemContent"
-            android:text="工作未完成時數"/>
-
-        <TextView
-            android:id="@+id/uncompleted_task_time"
-            style="@style/TaskCaseTextStyle.TaskItemContent"/>
-
-        <TextView
-            android:id="@+id/undergoing_task_time_text"
-            style="@style/TaskCaseTextStyle.TaskItemContent"
-            android:text="工作已進行時數"/>
-
-        <TextView
-            android:id="@+id/undergoing_task_time"
-            style="@style/TaskCaseTextStyle.TaskItemContent"/>
-
-        <TextView
-            android:id="@+id/undergoing_worker_count_text"
-            style="@style/TaskCaseTextStyle.TaskItemContent"
-            android:text="進行員工數"/>
-
-        <TextView
-            android:id="@+id/undergoing_worker_count"
-            style="@style/TaskCaseTextStyle.TaskItemContent"/>
-
-    </LinearLayout>
+    <com.bananaplan.workflowandroid.utility.ExpandableLayout
+        android:id="@+id/task_case_information_expandablelayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:el_headerLayout="@layout/task_case_information_header"
+        app:el_contentLayout="@layout/task_case_information_content"
+        android:background="@color/task_case_header_background_color"/>
 
 </LinearLayout>
