--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <declare-styleable name="HListView">
         <attr name="android:entries" />
         <attr name="android:divider" />
@@ -10,4 +11,11 @@
         <attr name="hlv_overScrollFooter" format="reference|color" />
         <attr name="hlv_measureWithChild" format="integer" />
     </declare-styleable>
+
+    <declare-styleable name="ExpandableLayout">
+        <attr name="el_headerLayout" format="reference"/>
+        <attr name="el_contentLayout" format="reference" />
+        <attr name="el_duration" format="integer" />
+    </declare-styleable>
+
 </resources>
