--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,14 +11,15 @@
 
     <!-- AssignTaskFragment: Tasks part -->
     <color name="task_case_view_background_color">#FF242424</color>
-    <color name="task_spinner_text_color">@android:color/white</color>
     <color name="task_case_text_color">#FF393939</color>
-    <color name="task_case_header_background_color">#FFFFFFFF</color>
-    <color name="task_item_background_color">#FFFFFFFF</color>
+    <color name="task_case_header_background_color">@android:color/white</color>
+    <color name="task_case_information_divider_color">#FFDADADA</color>
+    <color name="task_case_edit_button_text_color">#FF428BCA</color>
+    <color name="task_item_background_color">@android:color/white</color>
     <color name="task_item_stroke_color">#FF858585</color>
     <color name="task_item_divider_color">#FF858585</color>
     <color name="task_item_status_warning_color">#FFCE3C3E</color>
-    <color name="task_item_status_text_color">#FFFFFFFF</color>
+    <color name="task_item_status_text_color">@android:color/white</color>
 
     <!-- AssignTaskFragment: Workers part -->
     <color name="worker_pager_indicator_stroke_color">#FF858585</color>
