--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,9 +4,18 @@
     <dimen name="drawer_menu_container_width">240dp</dimen>
 
     <!-- AssignTaskFragment: Tasks part -->
-    <dimen name="task_spinner_text_size">25dp</dimen>
     <dimen name="task_case_view_padding_left_right">10dp</dimen>
     <dimen name="task_case_header_margin_bottom">10dp</dimen>
+    <dimen name="task_case_spinner_padding">15dp</dimen>
+    <dimen name="task_case_spinner_item_text_size">18dp</dimen>
+    <dimen name="task_case_information_height">120dp</dimen>
+    <dimen name="task_case_information_padding">15dp</dimen>
+    <dimen name="task_case_information_progressbar_height">20dp</dimen>
+    <dimen name="task_case_information_progressbar_margin_top">10dp</dimen>
+    <dimen name="task_case_information_title_text_size">18dp</dimen>
+    <dimen name="task_case_information_participated_employee_label_margin_top">10dp</dimen>
+    <dimen name="task_case_edit_button_padding">15dp</dimen>
+    <dimen name="task_case_edit_button_text_size">20dp</dimen>
     <dimen name="task_item_height">200dp</dimen>
     <dimen name="task_item_margin">10dp</dimen>
     <dimen name="task_item_padding">10dp</dimen>
