--- a/app/src/main/res/drawable/border_textview_bg_green.xml
+++ b/app/src/main/res/drawable/border_textview_bg_green.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="#ffffff" />
     <corners android:radius="3dp" />
-    <stroke android:width="1dip" android:color="#000000"/>
+    <stroke android:width="1dip" android:color="@color/taskitem_status_working"/>
 </shape>
