--- a/app/src/main/res/layout/case_spinner_view.xml
+++ b/app/src/main/res/layout/case_spinner_view.xml
@@ -5,28 +5,27 @@
 
     <ImageView
         android:id="@+id/case_spinner_view_iv1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="5dp"
+        android:layout_centerVertical="true"
         android:src="@android:drawable/ic_menu_call"/>
 
     <ImageView
         android:id="@+id/case_spinner_view_iv2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="15.3dp"
+        android:layout_height="15.3dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_dialog_email"/>
 
     <TextView
         android:id="@+id/case_spinner_view_tv_vendor_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="22sp"
-        android:textColor="#000000"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:textColor="#4a4a4a"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
