--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -55,5 +55,6 @@
     <dimen name="case_progress_bar_text_size">13sp</dimen>
     <dimen name="case_overview_taskitem_listview_item_height">50dp</dimen>
     <dimen name="case_overview_taskitem_listview_header_text_size">14sp</dimen>
+    <dimen name="case_overview_statistics_x_axis_padding">8dp</dimen>
 
 </resources>
