--- a/app/src/main/res/layout/case_taskcase_listview_view.xml
+++ b/app/src/main/res/layout/case_taskcase_listview_view.xml
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#9b9b9b"
+            android:textColor="@color/case_overview_taskcase_listview_vendor_textcolor"
             android:textSize="14sp"
             android:layout_below="@id/case_listview_view_tv_case_name"
             android:layout_marginTop="7dp"
